Changelog
=========

1.0b25 - Unreleased
-------------------


1.0b24 - Released July 29, 2010
-------------------------------

* Fix security issue with `getObject` on Solr flares, which used unrestricted
  traversal on the entire path, potentially leading to information leaks.
  Refs http://plone.org/products/collective.solr/issues/27
  [pilz, witsch]

* Add missing `CreationDate` method to flares.
  This fixes http://plone.org/products/collective.solr/issues/16
  [witsch]

* Add logging for slow queries along with the query time as reported by Solr.
  [witsch]

* Limit number of matches looked up during live search for speedier replies.
  [witsch]

* Renamed the batch parameters to ``b_start`` and ``b_size`` to avoid
  conflicts with index names and be consistent with existing template code.
  [do3cc]

* Added a new config option ``auto-commit`` which is enabled by default. You
  can disable this, which avoids any explicit commit messages to be sent to
  the Solr server by the client. You have to configure commit policies on
  the server side instead.
  [hannosch]

* Added support for a special query key ``use_solr`` which forces queries to
  be sent to Solr even though none of the required keys match. This can be
  used to sent individual catalog queries to Solr.
  [hannosch]


1.0b23 - Released May 15, 2010
------------------------------

* Add support for batching, i.e. only fetch and parse items from Solr,
  which are part of the currently handled batch.
  [witsch]

* Fix quoting of operators for multi-word search terms.
  [witsch]

* Use the faster C implementations of `elementtree`/`xml.etree` if available.
  [hannosch, witsch]

* Grant restricted code access to the search results, e.g. skin scripts.
  [do3cc, witsch]

* Fix handling of 'depth' argument when querying multiple paths.
  [reinhardt, witsch]

* Don't break when filter queries should be used for all parameters.
  [reinhardt, witsch]
